Add gpid to supported imp ext fields (#1585)